// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignStatus campaign errored 1`] = `
<React.Fragment>
  <div
    className="d-flex my-3"
  >
    <Memo(AlertCircleIcon)
      className="icon-inline text-danger mr-1"
    />
     
    Creation
     
    errored
  </div>
  <ErrorAlert
    className="mt-3"
    error="a"
  />
  <ErrorAlert
    className="mt-3"
    error="b"
  />
  <button
    className="btn btn-primary mb-2"
    onClick={[Function]}
    type="button"
  >
    Retry failed jobs
  </button>
</React.Fragment>
`;

exports[`CampaignStatus campaign plan processing 1`] = `
<React.Fragment>
  <div
    className="d-flex mt-3 e2e-preview-loading"
  >
    <LoadingSpinner
      className="icon-inline"
    />
     
    <span
      data-tooltip="Computing changesets"
    >
      3
       / 
      6
    </span>
  </div>
  <ErrorAlert
    className="mt-3"
    error="a"
  />
  <ErrorAlert
    className="mt-3"
    error="b"
  />
</React.Fragment>
`;

exports[`CampaignStatus campaign processing 1`] = `
<React.Fragment>
  <div
    className="d-flex mt-3 e2e-preview-loading"
  >
    <LoadingSpinner
      className="icon-inline"
    />
     
    <span
      data-tooltip="Computing changesets"
    >
      3
       / 
      6
    </span>
  </div>
  <ErrorAlert
    className="mt-3"
    error="a"
  />
  <ErrorAlert
    className="mt-3"
    error="b"
  />
</React.Fragment>
`;

exports[`CampaignStatus closed campaign 1`] = `
<React.Fragment>
  <div
    className="d-flex my-3"
  >
    <Memo(WarningIcon)
      className="icon-inline text-warning mr-1"
    />
     Campaign is closed
  </div>
</React.Fragment>
`;
